<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="org.yanzi.activity.Apply" >

<TextView 
    android:id="@+id/theme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/theme"
    android:layout_marginTop="10dp"
    >
 </TextView>
 
<TextView 
    android:id="@+id/time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/time"
     android:layout_marginTop="10dp"
    >
    </TextView>
<TextView 
    android:id="@+id/place"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/place"
     android:layout_marginTop="10dp"
    >
    </TextView>
<TextView 
    android:id="@+id/host"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/host"
     android:layout_marginTop="10dp"
    >
    </TextView>
<TextView 
    android:id="@+id/condition"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/condition"
     android:layout_marginTop="10dp"
    >
    </TextView>
<TextView 
    android:id="@+id/bonus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/bonus"
     android:layout_marginTop="10dp"
    >
    </TextView>
 <LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
    <Button
       android:id="@+id/applyBT"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="40dp"
       android:text="报名"
        ></Button>
     <Button
       android:id="@+id/applyDetail"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="50dp"
       android:layout_marginTop="40dp"
       android:text="报名详情"
       
       ></Button>
</LinearLayout>
<ImageView
      android:id="@+id/wechatPic"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginTop="20dp"
      android:src="@drawable/review"
    ></ImageView>
<ListView
         android:id="@+id/reviewList"
         android:layout_width="match_parent"
         android:layout_height="206dp" 
         android:layout_marginTop="10dp">
     </ListView>
</LinearLayout>
