<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/header"
        layout="@layout/header" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/instruction" />

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="180sp"
        android:scrollbarStyle="insideOverlay">
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"/>
    </ScrollView>
 
    <Button
        android:id="@+id/instruction_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>