<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="right"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="G A M I N G"
        android:textColor="#FF4500"
        android:textSize="40sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:text="@string/userName"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userName"
                style="?android:attr/textViewStyle"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/hint1"
                android:maxEms="16"
                android:minEms="5" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="40dp"
                android:text="@string/password"
                android:textColor="#000000" 
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/password"
                style="?android:attr/textViewStyle"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/hint2" />
            <!-- android:password="true" -->
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:clickable="true"
        android:text="@string/forgetPassword"
        android:textColor="#808080"
        android:textSize="18sp" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/button"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/login"
            android:textColor="#ffffff" 
            android:textSize="18sp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/button"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/register"
            android:textColor="#ffffff" 
             android:textSize="18sp"/>
    </LinearLayout>

    <!--  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/button"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/instruction"
            android:textColor="#ffffff" 
             android:textSize="18sp"/>
    </LinearLayout>
-->
</LinearLayout>