<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
     >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="#FF0000" >

        <TextView
            android:id="@+id/tv_netease_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/news_top_left_text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_netease_top"
            android:text="@string/news_top_left_text3"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/duoyun"
            android:contentDescription="@string/img_duoyun_desc" />
    </RelativeLayout>
    
	<TextView
	    android:id="@+id/textView_detail_id"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="YF咖啡杯-炉石传说"
	    />
	<TextView
	    android:id="@+id/textView_detail_deadline"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="报名截止：5月17号12：00 "
	    />
	<TextView
	    android:id="@+id/textView_detail_data"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="比赛时间：5月18号"
	    />
	<TextView
	    android:id="@+id/textView_detail_address"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="地点：北京交通大学YF楼三楼"
	    />
	<TextView
	    android:id="@+id/textView_detail_host"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="举办方：YF咖啡"
	    />
	<TextView
	    android:id="@+id/textView_detail_request"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="报名要求：排名模式20级以上"
	    />
	<TextView
	    android:id="@+id/textView_detail_rule"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="比赛规则：此处填写比赛规则"
	    />
	<TextView
	    android:id="@+id/textView_detail_award"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="奖金：2000元"
	    />
	<LinearLayout
        android:layout_width="match_parent"   
 		android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >
         	    <Button
	    android:id="@+id/button_detail_focus"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/button1"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:textColor="#FF4500" 
        android:textSize="18sp"
        android:focusable="true"  
        android:focusableInTouchMode="true"
	    android:text="关注"  />  
	    	<Button
	    android:id="@+id/button_detail_apply"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/button1"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:textColor="#ffffff" 
        android:textSize="18sp"
        android:layout_marginLeft="5dp"
	    android:text="我要报名"    
	    />
	    
	<Button
	    android:id="@+id/button_detail_detail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/button1"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:textColor="#ffffff" 
        android:textSize="18sp"
        android:layout_marginLeft="5dp"
	    android:text="报名详情" />
	 </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
         		
        android:orientation="horizontal" >
	<Button
	    android:id="@+id/button_detail_review_1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/button1"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:textColor="#ffffff" 
        android:textSize="18sp"

	    android:text="评论" />
 	<EditText
        android:id="@+id/edit_review_1"
        style="?android:attr/textViewStyle"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_review"
        android:maxEms="60" />
	 </LinearLayout>
	 
	

	<TextView
	    android:id="@+id/textView_detail_review_1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#FF6347"
	    android:padding="5sp"
	    android:textSize="20sp"/>

	<TextView
	    android:id="@+id/textView_detail_review_2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#FF6347"
	    android:padding="5sp"
	    android:textSize="20sp" />
	
 	 <TextView
	    android:id="@+id/textView_detail_review_3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#FF6347"
	    android:padding="5sp"
	    android:textSize="20sp"
	    android:text="               "/>
	 </LinearLayout>   
</ScrollView>
